// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`fallback renderer should skip empty lines false 1`] = `Array []`;

exports[`fallback renderer should skip empty lines false 2`] = `Array []`;

exports[`fallback renderer should skip empty lines false 3`] = `Array []`;

exports[`fallback renderer should skip empty lines true 1`] = `Array []`;

exports[`fallback renderer should skip empty lines true 2`] = `Array []`;

exports[`fallback renderer should skip empty lines true 3`] = `Array []`;

exports[`fallback renderer should truncate long strings 1`] = `
Array [
  Array [
    "[?25l",
  ],
  Array [
    "◼ This task will with formating the output with truncate output.
",
  ],
  Array [
    "[2K[1A[2K[G",
  ],
  Array [
    "◼ This task will with formating the output with truncate output.
",
  ],
  Array [
    "[2K[1A[2K[G",
  ],
  Array [
    "❯ This task will with formating the output with truncate output.
",
  ],
  Array [
    "[2K[1A[2K[G",
  ],
  Array [
    "❯ This task will with formating the output with truncate output.
  › THIS IS A LONG LONG MESSAGE THIS IS A LONG LONG MESSAGE THIS IS A LONG LO…
",
  ],
  Array [
    "[2K[1A[2K[1A[2K[G",
  ],
  Array [
    "❯ This task will with formating the output with truncate output.
  › THIS IS A LONG LONG MESSAGE THIS IS A LONG LONG MESSAGE THIS IS A LONG LO…
",
  ],
  Array [
    "[2K[1A[2K[1A[2K[G",
  ],
  Array [
    "✔ This task will with formating the output with truncate output.
",
  ],
  Array [
    "[?25h",
  ],
]
`;

exports[`fallback renderer should truncate long strings 2`] = `
Array [
  Array [
    "[?25l",
  ],
  Array [
    "[?25h",
  ],
]
`;

exports[`fallback renderer should truncate long strings 3`] = `Array []`;

exports[`fallback renderer should truncate long strings 4`] = `Array []`;

exports[`fallback renderer should truncate long strings 5`] = `Array []`;

exports[`fallback renderer should truncate long strings 6`] = `Array []`;

exports[`fallback renderer should truncate long titles 1`] = `Array []`;

exports[`fallback renderer should truncate long titles 2`] = `Array []`;

exports[`fallback renderer should truncate long titles 3`] = `Array []`;

exports[`fallback renderer should truncate long titles 4`] = `Array []`;

exports[`fallback renderer should truncate long titles 5`] = `Array []`;

exports[`fallback renderer should truncate long titles 6`] = `Array []`;

exports[`fallback renderer should wrap long strings 1`] = `Array []`;

exports[`fallback renderer should wrap long strings 2`] = `Array []`;

exports[`fallback renderer should wrap long strings 3`] = `Array []`;

exports[`fallback renderer should wrap long strings 4`] = `Array []`;

exports[`fallback renderer should wrap long strings 5`] = `Array []`;

exports[`fallback renderer should wrap long strings 6`] = `Array []`;

exports[`fallback renderer should wrap long titles 1`] = `Array []`;

exports[`fallback renderer should wrap long titles 2`] = `Array []`;

exports[`fallback renderer should wrap long titles 3`] = `Array []`;

exports[`fallback renderer should wrap long titles 4`] = `Array []`;

exports[`fallback renderer should wrap long titles 5`] = `Array []`;

exports[`fallback renderer should wrap long titles 6`] = `Array []`;
